--- a/app/views/bravura_template_prime/blog/_author_bio.html.erb
+++ b/app/views/bravura_template_prime/blog/_author_bio.html.erb
@@ -12,7 +12,7 @@
                   sizes: "(max-width: 599px) 480px, (max-width: 1199px) 800px, 1200px", 
                   class: "h-full w-full object-cover" %>
   <% else %>
-    <%= image_tag 'default_avatar',
+    <%= image_tag "bravura_template_prime/default_avatar.jpg",
                   alt: author.name, 
                   class: "h-full w-full object-cover" %>
   <% end %>
